<resources>
    <string name="app_name">Pizza Town</string>
    <string name="img_desc"> this is a ingredient of pizza </string>
    <string name="img_man"> this is a image of pizza  Man in order screen </string>
    <string name="cheese"> Cheese </string>
    <string name="mushroom"> Mushroom </string>
    <string name="tomato"> Tomato </string>
    <string name="olive"> Olive </string>
    <string name="basil"> Basil </string>
    <string name="pineapple"> Pineapple </string>
    <string name="check_out"> Proceed to Checkout </string>
    <string name="selected_ingridents"> your Selected Ingredients </string>
    <string name="back"> GO Back </string>
    <string name="confirm"> Confirm </string>

    <string-array name="pizzaTypes">
        <item name = "small_size">Small</item>
        <item name = "medium_size">Medium</item>
        <item name = "large_size">Large</item>
        <item name = "exlarge_size">Extra Large</item>
        <item name = "family_size">Family Pack</item>





    </string-array>

</resources>