<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    xmlns:android="http://schemas.android.com/apk/res/android">


<TextView
    android:id="@+id/title"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textSize="24sp"
    android:textStyle="bold"
    android:text="@string/selected_ingridents"
    />


<LinearLayout
    android:id="@+id/ingridients"
    android:layout_below="@+id/title"
    android:layout_marginVertical="10dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >
    <TextView
        android:id="@+id/textCheese"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cheese"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/textMushroom"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mushroom"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/textTomato"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tomato"
        android:textStyle="bold"
        />


    <TextView
        android:id="@+id/textOlive"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/olive"
        android:textStyle="bold"
        />


    <TextView
        android:id="@+id/textBasil"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/basil"
        android:textStyle="bold"
        />


    <TextView
        android:id="@+id/textPineapple"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pineapple"
        android:textStyle="bold"
        />


</LinearLayout>


    <LinearLayout
        android:id="@+id/btnsLayout"
        style="?android:attr/buttonBarStyle"
        android:layout_below="@+id/ingridients"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content">

        <Button
            android:id="@+id/btnBack"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:backgroundTint="@color/button_color"
            android:textColor="@color/black"
            android:layout_marginHorizontal="5dp" />

        <Button
            android:id="@+id/btnConfirm"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            android:backgroundTint="@color/button_color"
            android:layout_marginHorizontal="5dp"
            android:textColor="@color/black"
            />

    </LinearLayout>
    
    <ImageView
        android:contentDescription="@string/img_man"
        android:layout_below="@+id/btnsLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/pizza_man"

        />

</RelativeLayout>